# DoubleShiftEngine

./: .gitmodules  CMakeLists.txt  README.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Window.cpp  Window.h  main.cpp
src/GL/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/error/: DSError.h
src/gl/: GLObject.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
